--- a/003_JavaScript/18_Strings/06.html
+++ b/003_JavaScript/18_Strings/06.html
@@ -93,7 +93,11 @@
                 </pre>
             </div>
             <p id="demo01" class="demos demo_01">                
-            </p>                                           
+            </p>
+            <p>
+                
+            </p>
+            <a href="07.html">View Example 02</a>                                           
             <script>
                 let text = "We are the so-called \"Vikings\" from the north.";
                 document.getElementById("demo01").innerHTML = text;
