--- a/003_JavaScript/18_Strings/07.html
+++ b/003_JavaScript/18_Strings/07.html
@@ -10,106 +10,37 @@
     <div class="container">
         <div class="content">
             <h1>
-                JavaScript Strings 06
+                JavaScript Strings 07
             </h1>
             <h2>
                 Escape Characters
             </h2>
-            <p>
-                Because strings must be written quotes, JavaScript will misundertand this string. 
-            </p>
-            <div class="code">
-                <pre>
-                    <span class="colors blue">let text</span> = <span class="colors darkRed">"We are the so-called</span> "Vikings" <span class="colors darkRed">from the north.</span>";
-                </pre>
-            </div>
-            <p>
-                The string will be chopped to "We are the so-called".
-            </p>
-            <p>
-                To solve this problem, you can use an <b>backslash escape character</b>.
-            </p>
-            <p>
-                The backslash escape character ( <span class="colors blue">\</span> ) turn special characters into strin characters:
-            </p>
-            <table>
-                <tr>
-                    <th>
-                        Code
-                    </th>
-                    <th>
-                        Result
-                    </th>
-                    <th>
-                        Description
-                    </th>
-                </tr>
-                <tr>
-                    <td>
-                        \'
-                    </td>
-                    <td>
-                        '
-                    </td>
-                    <td>
-                        Single quote
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        \"
-                    </td>
-                    <td>
-                        "
-                    </td>
-                    <td>
-                        Double quote 
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        \\
-                    </td>
-                    <td>
-                        \
-                    </td>
-                    <td>
-                        Backslash 
-                    </td>
-                </tr>
-            </table>
             <h3>
-                Examples:
+                Example 02
             </h3>
             <p>
-                \" inserts a double quote in a string
-            </p>
-            <p>
-                The escape sequence \" inserts a double quote in a string.
+                The scape sequence \' inserts a single quote in a string.
             </p>
             <div class="code">
                 <pre>
-                    <span class="colors blue">let text</span> = <span class="colors darkRed">"We are the so-called</span> "Vikings" <span class="colors darkRed">from the north.</span>";
+        <span class="colors blue">let text</span> = <span class="colors darkRed">'It\'s alright.';</span>
                 </pre>
-            </div>
+            </div>            
             <p id="demo01" class="demos demo_01">                
-            </p>
-            <p>
-                
-            </p>
-            <a href="07.html">View Example 02</a>                                           
+            </p>            
+            <a href="08.html">View Example 02</a>                                           
             <script>
-                let text = "We are the so-called \"Vikings\" from the north.";
+                let text = 'It\'s alraight.';
                 document.getElementById("demo01").innerHTML = text;
             </script>
         </div>
         <div class="menu">
             <button>
-                <a href="05.html">Before</a>
+                <a href="06.html">Before</a>
             </button>            
             |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
             <button>
-                <a href="06.html">Next</a>
+                <a href="07.html">Next</a>
             </button>
         </div>
     </div>    
