--- a/003_JavaScript/001Tutorial/19_StringMethods/17.html
+++ b/003_JavaScript/001Tutorial/19_StringMethods/17.html
@@ -10,27 +10,24 @@
     <div class="container">
         <div class="content">
             <h1>
-                JavaScript Strings Methods 15
+                JavaScript Strings Methods 17
             </h1>            
             <h2>
-                The padStart() Method
-            </h2>
+                The padEnd() Method
+            </h2> 
             <p>
-                The <span class="nota">&nbsp;&nbsp;padStart&nbsp;&nbsp;</span>Method pads a string from the start.
+                The <span class="nota">&nbsp;&nbsp;padEnd&nbsp;&nbsp;</span> method pads a string at the end
             </p>
             <p>
-                It pads the string with another string (multiple times) until it reaches a given legth.
-            </p>            
+                It pads the string with another string (multiple times) until reaches a given length.
+            </p>
             <h3>
                 Example
-            </h3>
-            <p>
-                Pad a string with "0" until it reaches the legth 4:
-            </p>
+            </h3>            
             <div class="code">
                 <pre>
-                    let text01 = "5";
-                    let padded = text01.padStart(4,"0");                    
+                    let num = 5;                    
+                    let padded = text.padEnd(4,"0");                    
                 </pre>
             </div>
             <p id="demo01" class="demos demo_01">                
@@ -42,27 +39,27 @@
             <div class="code">
                 <pre>
                     let text01 = "7";
-                    let padded = text01.padStart(7,"x");                    
+                    let padded = text01.padEnd(7,"x");                    
                 </pre>
             </div>
             <p id="demo02" class="demos demo_02">                
             </p>            
             <script>
                 let text01 = "5";
-                text01 = text01.padStart(4,"0");
+                text01 = text01.padEnd(4,"0");
                 document.getElementById("demo01").innerHTML = text01;
                 text02 = "7";
-                text02 = text02.padStart(7,"x");
+                text02 = text02.padEnd(7,"x");
                 document.getElementById("demo02").innerHTML = text02;
             </script>            
         </div>
         <div class="menu">
             <button>
-                <a href="14.html">Before</a>
+                <a href="16.html">Before</a>
             </button>            
             |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
             <button>
-                <a href="16.html">Next</a>
+                <a href="18.html">Next</a>
             </button>
         </div>
     </div>    
