--- a/003_JavaScript/007_DOM/01_Intro/02.html
+++ b/003_JavaScript/007_DOM/01_Intro/02.html
@@ -3,58 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript DOM</title>
+    <title>JavaScript What is the DOM?</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="content">
             <h1>
-                JavaScript HTML DOM 01
+                JavaScript HTML DOM 02
             </h1>
-            <p>
-                With the HTML DOM, JavaScript can access and change all the elements of an HTML document.
-            </p>
             <h2>
-                The HTML DOM (Document Object Model)
+                What is the DOM?
             </h2>
             <p>
-                When a web page is loaded, the browser creates a <b>D</b>ocument <b>O</b>bject <b>M</b>odel of the page.
+                The DOM is a W3C (World Wide Web Consortium) standard.
             </p>
             <p>
-                The <b>HTML DOM</b> model es constructed as a tree of <b>Objects</b>.
+                the DOM defines a standard for accesing documents
             </p>
             <p>
-                With the object model, JavaScript gets all the power it needs to create dynamic HTML:
+                <i>
+                    "The W3C Document Object Model (DOM)" is a platform and language neutral interface that allows programs and scripts to dynamically acces and update the content, structure and style of a document."
+                </i>
             </p>
             <p>
-                With the Object Model, JavaScript can:
+                The W3X DOM standard is separated into 3 different parts:
             </p>
             <div class="list">
                 <ul>
                     <li>
-                         change all the HTML elements in the page
+                        Core DOM - standard model for all document types
                     </li>
                     <li>
-                        change all the HTML attributes in the page
+                        XML DOM - standard model for XML documentsd
                     </li>
                     <li>
-                        change all the CSS styles in the page
-                    </li>
-                    <li>
-                        remove existing HTML elements and attributes
-                    </li>
-                    <li>
-                        add new HTML elements and attributes
-                    </li>
-                    <li>
-                        react to all existing HTML events in the page
-                    </li>
-                    <li>
-                        create new HTML events in the page
+                        HTML DOM - standard model for HTML documents
                     </li>
                 </ul>
             </div>
+            <h2>
+                What is the HTML DOM?
+            </h2>
+            <p>
+                The HTML DOM is a standard <b>object</b> model and <b>programming interface</b> for HTML. It defines: 
+            </p>
+            <div class="lis">
+                <ul>
+                    <li>
+                        The HTML elements as <b>objects</b>
+                    </li>
+                    <li>
+                        The <b>properties</b> of all HTML elements
+                    </li>
+                    <li>
+                        The <b>methods</b> to acces all HTML events
+                    </li>
+                    <li>
+                        The <b>events</b> for all HTML elements
+                    </li>
+                </ul>
+            </div>
+            <p>
+                In other words:  <b>The HTML DOM is a standard for how to get, change, add, or delet HTML elements</b>.
+            </p>
             <h2>
                 What You Will Learn
             </h2>
@@ -76,15 +88,15 @@
                         add and delete HTML elements
                     </li>
                 </ul>
-            </div>            
+            </div>
         </div>
         <div class="menu">
             <button>
-                <a href="02.html">Before</a>
+                <a href="01.html">Before</a>
             </button>            
             |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
             <button>
-                <a href="02.html">Next</a>
+                <a href="01.html">Next</a>
             </button>
         </div>
     </div>    
