--- a/003_JavaScript/007_DOM/03_Elements/04.html
+++ b/003_JavaScript/007_DOM/03_Elements/04.html
@@ -10,27 +10,27 @@
     <div class="container">
         <div class="content">
             <h1>
-                JavaScript HTML DOM Elements 03
+                JavaScript HTML DOM Elements 04
             </h1>
             <h2>
-                Finding HTML Elements by Class Name
+                Finding HTML Elements by CSS Selectors
             </h2>
             <!-- index 0 -->            
             <p>
-                If you want to find all HTML elements with the same class name, use <span class="nota">&nbsp;&nbsp;getElementsByClassName()&nbsp;&nbsp;</span> . 
+                If you want to find all HTML that match a specified CSS selector (id, class names, types, attributes, values of attributes, etc.) use the <span class="nota">&nbsp;&nbsp;querySelectorAll()&nbsp;&nbsp;</span> method. 
             </p>
             <!-- index 1 -->
             <p>
-                This example returns a list of all elements with <span class="nota">&nbsp;&nbsp;class="intro"&nbsp;&nbsp;</span> 
+                This example returns a list of all <span class="nota">&nbsp;&nbsp;&lt;p&gt;&nbsp;&nbsp;</span> elements with <span class="nota">&nbsp;&nbsp;class="intro"&nbsp;&nbsp;</span> .
             </p>            
             <div class="code">
                 <pre>
-                const x = document.getElementsByClassName("intro");            
+                                    const x = document.querySelectorAll("p.intro");            
                 </pre>                
             </div>            
             <!-- index 2 -->
             <p>
-                Finding HTML Elements by Class Name
+                Finding HTML Elements by Query Selector
             </p>
             <!-- index 3 -->
             <p class="intro">
@@ -38,25 +38,24 @@
             </p>
             <!-- index 4 -->
             <p  class="intro"> 
-                This example demonstrates the <b>getElementsByClassName</b> method.
+                This example demonstrates the <b>querySelectorAll</b> method.
             </p>
             <!-- index 5 -->
             <p id="demo01" class="demos demo_01">                 
             </p>
             <script>
-                const x = document.getElementsByClassName("intro");
+                const x = document.querySelectorAll("p.intro");
                 document.getElementById("demo01").innerHTML =
-                'The first paragraph (index 0) with class="intro" is: ' + x[0].innerHTML;
-                document.getElementById("demo01").style.color = "blue";
+                'The first paragraph (index 0) with class="intro" is ' + x[0].innerHTML;
             </script>
         </div>
         <div class="menu">
             <button>
-                <a href="02.html">Before</a>
+                <a href="03.html">Before</a>
             </button>            
             |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
             <button>
-                <a href="04.html">Next</a>
+                <a href="05.html">Next</a>
             </button>
         </div>
     </div>    
